# todo-app-sdd

./: .env.local  .gitignore  README.md  package-lock.json  pyproject.toml  test_menu.py
.claude/agents/: betterauth-signup-signin.md
.specify/memory/: constitution.md
.vercel/: project.json
frontend/: package-lock.json
history/prompts/authentication/: 007-verify-frontend-build-and-forms.green.prompt.md
history/prompts/general/: 003-resume-commit-interactive-menu.general.prompt.md  006-push-project-to-hackathon-repository.general.prompt.md  008-resume-phase-ii-state-analysis.general.prompt.md  009-test-on-local-host.misc.prompt.md  010-show-ui-frontend-localhost.misc.prompt.md  011-troubleshoot-frontend-module-error.misc.prompt.md  (+3 more)
phase-I/console-app/: README.md  TEST_WINDOWS.md  test_interactive.py  test_mvp.sh  todo_interactive.py  validate_cli.sh
phase-II/: CLAUDE.md
phase-II/.spec-kit/: config.yaml
phase-II/backend/: .gitignore  .railway.env  CLAUDE.md  Procfile  debug_signup.py  fix_user_schema.py  railway.json  railway.toml  recreate_schema.py  requirements.txt  run.sh  test_api_directly.py  test_debug.py  test_raw_signup.py  test_session_dependency.py  test_with_requests.py
phase-II/frontend/: .env.local  README.md  better-auth.ts  package-lock.json  package.json  package.json.simple  tsconfig.tsbuildinfo
specs/: architecture.md  overview.md
specs/002-list-tasks/: spec.md
specs/database/: schema.md
specs/features/: task-crud.md
specs/ui/: components.md
src/cli/: main.py  menu.py
src/lib/: storage.py
tests/unit/: test_cli_list.py
(+65 files in other folders)
